# The-Cloak

./: CMakeLists.txt  README.md  dxgi_hook.cpp  launcher.cpp
.github/workflows/: cmake-multi-platform.yml
src/: dxgi_hook.cpp  launcher.cpp  overlay_renderer.h  shaders.hlsl
